--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,7 @@ a {
 }
 .header__nav {
     padding: 25px 0;
-    background: rgb(80, 80, 185);
+    background: black;
 }
 .header__nav-list {
     display: flex;
